# ChessMate

./: .gitignore  README.md  command.sh  requirements.txt
bash/: kill.sh  launch_all.sh  pick_and_place_test.sh
src/chessmate/: CMakeLists.txt  package.xml
src/chessmate/include/chessmate/: helper.h  helper.hpp
src/chessmate/scripts/: arduino-driver.py  joint_positions.json  mock_services.py  moveit_stress_test.py  recorder.py  stockfish_driver.py
src/chessmate/scripts/vision/: HandTrackingModule.py  board.py  board_localization.py  camera.py  chessBoard.py  chessGame.py  color_top_vision.py  coordinate.py  face_tracer.py  fingerReader.py  inRange_limit_finder.py  return_codes.py  side_vision.py  top_vision.py  top_vision_test.py  vision.py  vision_bridge.py  vision_calibration_parameters.py  vision_test.py
src/chessmate/src/: chessmate.cpp  chessmate_helpers.h  go_square_test.cpp  pick_and_place_test.cpp
src/chessmate/srv/: QueryVisionComponent.srv  chess_game_state.srv  chess_next_move.srv  chess_opponent_move.srv  chessboard_to_coord.srv  chesswatch_serv.srv  franka_control_start_stop.srv  getPositionOfPieces.srv  next_move.srv  pick_and_place.srv  readFinger.srv  see_chessboard.srv
src/vision/: CMakeLists.txt  package.xml
src/vision/scripts/: vision.py  vision_test.py
